--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: "About"
 description: "Hey, this is Dianlanlan."
 header-img: "img/bg-index.jpg"
 ---
-
+<!-- Changed by dianlan -->
 <!-- Chinese Version -->
 <div class="zh post-container">
     {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
